# Flip

./: .env.example  .gitignore  ADVANCED_FEATURES.md  AZURE_OPENAI_UPDATE.md  DATABASE_COMPARISON.md  EMBEDDINGGEMMA_GUIDE.md  INSTALL.md  LICENSE  LOGGING_DEBUG_GUIDE.md  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  TESTING.md  prepare_build.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py
docs/: advanced.html  examples.html  index.html  installation.html  script.js  styles.css  troubleshooting.html  vector-databases.html
examples/: README.md  advanced_config.py  advanced_features.py  advanced_image_processing.py  azure_openai_example.py  basic_usage.py  embeddinggemma_example.py  faiss_example.py  hybrid_storage_example.py  image_embedding_example.py  incremental_and_evaluation.py  logging_and_debugging.py  migration_example.py  milvus_example.py  multimodal_rag_example.py  pgvector_example.py  pinecone_example.py  qdrant_example.py  weaviate_example.py
flip/: __init__.py
flip/core/: __init__.py  config.py  exceptions.py  flip.py  multimodal_response.py
flip/document/: chunks.py  docx_image_extractor.py  html_image_extractor.py  image_extractor.py  image_factory.py  loader_with_images.py  pdf_image_extractor.py
flip/document_processing/: __init__.py  chunker.py  loader.py  parser.py  preprocessor.py
flip/embedding/: __init__.py  azure_openai.py  base.py  factory.py  google.py  huggingface.py  openai.py  sentence_transformers.py
flip/embedding/image/: __init__.py  base.py  cache.py  factory.py  huggingface_clip.py  openai_clip.py  parallel.py  preprocessing.py  sentence_transformers_clip.py
flip/evaluation/: __init__.py  metrics.py  monitor.py
flip/generation/: __init__.py  anthropic.py  azure_openai.py  base.py  factory.py  gemini.py  huggingface.py  ollama.py  openai.py
flip/pipeline/: __init__.py  cache.py  incremental.py  multimodal.py  orchestrator.py
flip/retrieval/: __init__.py  hybrid_search.py  query_processor.py  reranker.py  retriever.py
flip/utils/: __init__.py  debug.py  logger.py
flip/vector_store/: __init__.py  base.py  chroma.py  config.py  elasticsearch.py  factory.py  faiss.py  milvus.py  mock.py  mongodb.py  pgvector.py  pinecone.py  qdrant.py  redis.py  weaviate.py
tests/: benchmark.py  conftest.py  fixtures.py  performance.py  quick_test.py  test_document_processing.py  test_embedding.py  test_faiss.py  test_integration.py  test_milvus.py  test_pgvector.py  test_pinecone.py  test_qdrant.py  test_retrieval.py  test_vector_store.py  test_weaviate.py
