[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flip-rag"
version = "0.1.0"
description = "Fully automated RAG SDK - Initialize with a directory and start querying"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Flip Team"}
]
keywords = ["rag", "retrieval", "llm", "ai", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    
    # Vector stores
    "chromadb>=0.4.0",
    
    # Document processing
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.4.0",
    "lxml>=4.9.0",
    
    # Embeddings
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    
    # Retrieval
    "rank-bm25>=0.2.2",
    
    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    
    # Utilities
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

pinecone = ["pinecone-client>=3.0.0"]
qdrant = ["qdrant-client>=1.7.0"]
weaviate = ["weaviate-client>=4.4.0"]
all = ["flip-rag[pinecone,qdrant,weaviate]"]

[project.urls]
Homepage = "https://github.com/yourusername/flip"
Documentation = "https://flip-rag.readthedocs.io"
Repository = "https://github.com/yourusername/flip"
Issues = "https://github.com/yourusername/flip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["flip*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=flip --cov-report=term-missing"
